# absorber_g4

./: .clang-format  CMakeLists.txt  LICENSE  compile_flags.txt  gui.mac  main.cc  vis.mac
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GapElectronHit.hh  GapSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  SteppingMessenger.hh
macros/: run1.mac  run2.mac
source/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  GapElectronHit.cc  GapSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  SteppingMessenger.cc
